// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkLink should render correctly with "blank" and "rel" attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-link"
    href="#"
    rel="rel-overwrite"
    target="_blank"
  >
    <span
      class="bpk-link-underlined"
    >
      Link (new window)
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with a "alternate" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-link bpk-link--alternate"
    href="#"
  >
    <span
      class="bpk-link-underlined bpk-link-underlined--alternate"
    >
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with a "blank" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-link"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="bpk-link-underlined"
    >
      Link (new window)
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-link test-class"
    href="#"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with a "href" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-link"
    href="#"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with a "rel" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-link"
    href="#"
    rel="rel-attr"
    target="_blank"
  >
    <span
      class="bpk-link-underlined"
    >
      Link (new window)
    </span>
  </a>
</DocumentFragment>
`;

exports[`BpkLink should render correctly with arbitrary attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-link"
    href="#"
    id="test-id"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </a>
</DocumentFragment>
`;
